ci button (#87)
* ci button

* minor update
