# softwarepkg/controller/software_pkg.go
@@ -27,6 +27,7 @@ func AddRouteForSoftwarePkgController(r *gin.RouterGroup, pkgService app.Softwar
 	r.PUT("/v1/softwarepkg/:id/review/approve", m, ctl.Approve)
 	r.PUT("/v1/softwarepkg/:id/review/reject", m, ctl.Reject)
 	r.PUT("/v1/softwarepkg/:id/review/abandon", m, ctl.Abandon)
+	r.PUT("/v1/softwarepkg/:id/review/rerunci", m, ctl.RerunCI)
 	r.POST("/v1/softwarepkg/:id/review/comment", m, ctl.NewReviewComment)
 	r.POST("/v1/softwarepkg/:id/review/comment/:cid/translate", m, ctl.TranslateReviewComment)
 }
@@ -304,6 +305,30 @@ func (ctl SoftwarePkgController) UpdateApplication(ctx *gin.Context) {
 	)
 	if err != nil {
 		commonctl.SendFailedResp(ctx, "", err)
+	} else {
+		commonctl.SendRespOfPut(ctx)
+	}
+}
+
+// ReRunCI
+// @Summary rerun ci of software package
+// @Description rerun ci of software package
+// @Tags  SoftwarePkg
+// @Accept json
+// @Param	id  path	 string	 true	"id of software package"
+// @Success 202 {object} ResponseData
+// @Failure 400 {object} ResponseData
+// @Router /v1/softwarepkg/{id}/review/rerunci [put]
+func (ctl SoftwarePkgController) RerunCI(ctx *gin.Context) {
+	user, err := middleware.UserChecking().FetchUser(ctx)
+	if err != nil {
+		commonctl.SendFailedResp(ctx, "", err)
+
+		return
+	}
+
+	if code, err := ctl.service.RerunCI(ctx.Param("id"), &user); err != nil {
+		commonctl.SendFailedResp(ctx, code, err)
 	} else {
 		commonctl.SendRespOfPut(ctx)
 	}
